# COMP0221_Coursework1

./: CMakeLists.txt  README.md  mac_dict.py  visualiser.py
core/: EspHal.h  compute_cmac.c  compute_cmac.h  flocking_control.c  flocking_control.h  monitor_task.c  monitor_task.h  neighbour_table.cpp  neighbour_table.h  physics_integration.c  physics_integration.h  telemetry.c  telemetry.h
main/: CMakeLists.txt  attack.c  config.h  idf_component.yml  main.c  replay_attack.c
